--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "2529bac6-0f8b-43b0-8eb1-7bc1d59a6421"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
